tests/valid_inputs/bin_neq.cpp

int main() {
	return 42 != 41;
}
