tests/invalid_inputs/sema/func_to_ptr_conversion.cpp

int f();

int main() {
	int i = f;
}
